--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     --main-font: #434A54;
     --footer: #000000;
     font-size: 14px;
+    max-width: 800px;
 
 }
 nav {
@@ -18,10 +19,13 @@ nav {
     padding-right: 1rem;
     position: sticky;
     top: 0;    
+
 }
 
 body {
-    margin: 0;
+    margin: auto;
+
+    text-align: center;
 }
 
 h1 {
