--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 :root {
     font-family: 'Inter', sans-serif;
     --primary: rgb(1, 197, 197);
+    --primarylighter: rgb(1, 216, 216);
     --secondary-font: red;
     --main-font: #434A54;
     --footer: #000000;
     font-size: 14px;
     background-color: #000000;
-
 }
 nav {
     color: white;
@@ -27,10 +27,16 @@ nav > h1 {
     height: 100%;
 }
 
-#logo img {
+#git-logo img {
     width: 40px;
     height: 100%;
     align-items: center;
+}
+
+#journey-logo {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: xx-large;
 }
 
 
@@ -55,14 +61,40 @@ p {
     font-size: x-large;
 }
 main {
-    height: 80rem;
     padding: 1rem;
     background-color: white;
 }
 
 footer {
     background-color: var(--footer);
-    height: 10rem;
+    height: 25rem;
+}
+
+h3 {
+    font-size: x-large;
+    font-weight: 500;
+}
+
+hr {
+    width: 80%;
+    max-width: 500px;
+}
+
+#blogs-el {
+    height: 20rem;
+    border: 4px solid var(--primarylighter);
+    border-radius: 1rem;
+    max-width: 500px;
+    margin: auto;
+    margin-bottom: 5rem;
+}
+#face-pic {
+    width: 20rem;
+}
+
+#text-container-el {
+    max-width: 700px;
+    margin: auto;
 }
 
 #menu-btn img {
