--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ hr {
     gap: 3rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    margin-top: 3rem;
+    margin-top: 1rem;
     font-size: small;
 }
 
@@ -117,6 +117,19 @@ hr {
     display: flex;
     align-self: center;
 }
+
+#logo-container img {
+    width: 50px;
+}
+
+.twitter-icon {
+    width: 30px;
+    filter: invert(1);
+}
+footer p {
+    margin-bottom: 0;
+}
+
 
 #logo-container a {
     color: white;
